--- a/src/main.styl
+++ b/src/main.styl
@@ -1,2 +1,24 @@
 body
   margin:0
+
+#app
+  display: flex
+  flex-flow: row wrap
+  max-width: 1200px
+  width: 100%
+  margin: 30px auto
+
+.messagebox-card
+  max-width: 1200px
+  margin: 30px auto
+  padding: 30px
+
+  textarea
+    width: 100%
+    border-color: #d0d0d0
+    resize: none
+    border-radius: 3px
+    min-height: 50px
+    color: #555
+    font-size: 14px
+    outline: auto 0px
