--- a/src/main.styl
+++ b/src/main.styl
@@ -22,3 +22,9 @@ body
     color: #555
     font-size: 14px
     outline: auto 0px
+
+.login {
+  max-width: 800px
+  margin: 30px auto
+  padding: 50px
+}
